# QuickTranslator

./: CMakeLists.txt  sonar-project.properties
src/: .Translator.bak.swp  ChinesePhienAmWords - Copy.txt  ChinesePhienAmWords.txt  Common.h  ConsoleApplication3.cpp  Dictionary.cpp  Dictionary.h  MyPlainTextEdit.cpp  MyTextEdit.cpp  MyTextEdit.h  Names - Copy.txt  Names.txt  QuickTranslatorGUI.cpp  QuickTranslatorGUI.h  Translator.bak  Translator.cpp  Translator.h  dictionaries_log.txt  log.h  main.cpp  resource.h
tests/: CMakeLists.txt  test.cpp  test_vp.txt
